--- a/src/Preview/Preview.css
+++ b/src/Preview/Preview.css
@@ -29,3 +29,23 @@
     top: 0;
     z-index: 1;
 }
+
+.previewText {
+    margin-left: auto;
+}
+
+.iconContainer {
+    margin-left: auto;
+    width: 25px;
+    height: 60px;
+    padding: 0;
+    border: none;
+}
+.icon {
+    background-color: rgb(63, 175, 173);
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    color: #ffffff   
+}
