--- a/src/Preview/Preview.css
+++ b/src/Preview/Preview.css
@@ -77,3 +77,17 @@ img {
     background-color: #fff;
     vertical-align: middle;
 }
+
+table {
+    border-spacing: 0
+}
+
+th, td {
+    padding: 6px 13px;
+    border: 1px solid #ddd;
+}
+
+th {
+    font-weight: bold;
+    margin: 0
+}
