--- a/src/DocumentPage/DocumentPage.css
+++ b/src/DocumentPage/DocumentPage.css
@@ -2,7 +2,12 @@
     box-sizing: border-box;
   }
   
-  .container {
+  .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .docContainer {
     display: flex;
     justify-content: center;
   }
