disable preview menu for now

--- a/src/Preview/Preview.css
+++ b/src/Preview/Preview.css
@@ -31,9 +31,9 @@
     z-index: 1;
 }
 
-.previewText {
+/* .previewText {
     margin-left: auto;
-}
+} */
 
 .iconContainer {
     margin-left: auto;
